--- a/public/test.html
+++ b/public/test.html
@@ -60,27 +60,24 @@
     <div class="sticky-header">
       <h3 class="text-center mb-4">📊 عرض تقييم اللجان</h3>
       <div class="filters row">
-        <div class="col-md-4 mb-2">
+        <div class="col-md-3 mb-2">
           <label class="form-label">الكلية</label>
           <select id="collegeFilter" class="form-select">
             <option value="">جميع الكليات</option>
           </select>
         </div>
-        <div class="col-md-4 mb-2">
-          <label class="form-label">بحث باسم اللجنة</label>
+        <div class="col-md-3 mb-2">
+          <label class="form-label">البحث بإسم اللجنة</label>
           <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
         </div>
-        <div class="col-md-4 mb-2">
-          <label class="form-label">خيارات العرض</label>
-          <div>
-            <div class="form-check">
-              <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
-              <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date" >
-              <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
-            </div>
+        <div class="col-md-3 mb-2 d-flex align-items-center">
+          <div class="form-check me-3">
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" checked>
+            <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date">
+            <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
           </div>
         </div>
       </div>
@@ -142,6 +139,7 @@
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError = new bootstrap.Toast(document.getElementById('toastError'));
     let lastCollege = "";
+    let savedVisibleColumns = [];
 
     function showSuccess(msg="✅ العملية نجحت") {
       document.querySelector("#toastSuccess .toast-body").innerText = msg;toastSuccess.show();
@@ -164,7 +162,12 @@
     function updateAvailability(row) {
       let sum = 0;
       const fields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
-      fields.forEach(f => {const cell = row.querySelector(`[data-field="${f}"]`);sum += parseFloat(cell?.innerText) || 0;});
+      fields.forEach(f => {
+        const cell = row.querySelector(`[data-field="${f}"]`);
+        if (cell && !cell.classList.contains("hidden-col")) {
+          sum += parseFloat(cell?.innerText) || 0;
+        }
+      });
       const availabilityCell = row.querySelector(".availability-cell");
       availabilityCell.innerText = sum.toFixed(2);
       availabilityCell.classList.add("highlight");
@@ -213,8 +216,8 @@
           tbody.appendChild(tr);
           updateAvailability(tr);
         });
-        updateCompletionRate();
         applyColumnVisibility();
+        updateCompletionRate();
         applyCommitteeSearch();
       } catch (err) { showError("❌ فشل تحميل البيانات"); console.error(err); }
     }
@@ -233,12 +236,12 @@
       let numCommittees = 0;
       rows.forEach(row => {
         const availabilityCell = row.querySelector('.availability-cell');
-        if (availabilityCell) {
+        if (availabilityCell && row.style.display !== "none") {
           totalAvailability += parseFloat(availabilityCell.innerText) || 0;
           numCommittees++;
         }
       });
-      const visibleCols = 9; 
+      const visibleCols = savedVisibleColumns.length;
       const denominator = numCommittees * visibleCols;
       const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
       const completionDiv = document.getElementById("completionRateContainer");
@@ -254,6 +257,17 @@
       const showDate = document.getElementById('toggle_date').checked;
       document.querySelectorAll('.col-college').forEach(cell => {cell.classList.toggle('hidden-col', !showCollege);});
       document.querySelectorAll('.date-col').forEach(cell => {cell.classList.toggle('hidden-col', !showDate);});
+
+      // تطبيق إعدادات صفحة الإدارة
+      const allFields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
+      allFields.forEach(f => {
+        document.querySelectorAll(`[data-field="${f}"]`).forEach(cell => {
+          cell.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
+        });
+        const th = document.querySelector(`.col-${f}`);
+        if (th) th.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
+      });
+
       document.querySelectorAll('#committeesTable tr').forEach(tr => updateAvailability(tr));
       updateCompletionRate();
       updateAvailabilityHeader();
@@ -261,10 +275,8 @@
     document.querySelectorAll('.simple-toggle').forEach(cb => {cb.addEventListener('change', applyColumnVisibility);});
 
     function updateAvailabilityHeader() {
-      const visibleCols = 9;
-      document.getElementById("availabilityHeader").innerText = `درجة التوفر من (${visibleCols})`;
+      document.getElementById("availabilityHeader").innerText = `درجة التوفر من (${savedVisibleColumns.length})`;
     }
-    updateAvailabilityHeader();
 
     function applyCommitteeSearch() {
       const searchTerm = document.getElementById("committeeSearch").value.trim().toLowerCase();
@@ -279,11 +291,13 @@
       try {
         const res = await axios.get('/api/settings');
         const settings = res.data;
+        savedVisibleColumns = settings.visibleColumns || [];
         if (settings.selectedVisits) {
           document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: " + settings.selectedVisits.join(" | ");
         } else {
           document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";
         }
+        applyColumnVisibility();
       } catch (err) {
         console.error("❌ فشل تحميل الإعدادات", err);
         document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";
