--- a/public/test.html
+++ b/public/test.html
@@ -53,39 +53,54 @@
       background: #f8f9fa;
       color: #000;
     }
+
+    /* ✅ للطباعة */
+    @media print {
+      @page { size: A4 landscape; margin: 10mm; }
+      body * { visibility: hidden; }
+      .printable, .printable * { visibility: visible; }
+      .printable { position: absolute; top: 0; left: 0; width: 100%; }
+      .no-print { display: none !important; }
+      table { font-size: 12px; }
+      #evaluationsTableWrapper th, #evaluationsTableWrapper td { padding: 4px; }
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="sticky-header">
-      <h3 class="text-center mb-4">📊 عرض تقييم اللجان</h3>
-      <div class="filters row">
-        <div class="col-md-3 mb-2">
-          <label class="form-label">الكلية</label>
-          <select id="collegeFilter" class="form-select">
-            <option value="">جميع الكليات</option>
-          </select>
-        </div>
-        <div class="col-md-3 mb-2">
-          <label class="form-label">البحث بإسم اللجنة</label>
-          <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
-        </div>
-        <div class="col-md-3 mb-2 d-flex align-items-center">
-          <div class="form-check me-3">
-            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" checked>
-            <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date">
-            <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
-          </div>
-        </div>
+  <div class="container printable">
+    <div class="sticky-header d-flex justify-content-between align-items-center">
+      <h3 class="text-center mb-4 flex-grow-1">📊 عرض تقييم اللجان</h3>
+      <button class="btn btn-secondary no-print" onclick="window.print()">🖨️ طباعة</button>
+    </div>
+
+    <div class="filters row align-items-center">
+      <div class="col-md-4 mb-2">
+        <label class="form-label">الكلية</label>
+        <select id="collegeFilter" class="form-select">
+          <option value="">جميع الكليات</option>
+        </select>
       </div>
-      <div id="infoContainer">
-        <div id="selectedVisitsContainer"></div>
-        <div id="completionRateContainer"></div>
+      <div class="col-md-4 mb-2 d-flex align-items-center">
+        <label class="form-label me-2">البحث بإسم اللجنة</label>
+        <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
+      </div>
+      <div class="col-md-4 mb-2 d-flex align-items-center gap-3">
+        <div class="form-check">
+          <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
+          <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date">
+          <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
+        </div>
       </div>
     </div>
+
+    <div id="infoContainer">
+      <div id="selectedVisitsContainer"></div>
+      <div id="completionRateContainer"></div>
+    </div>
+
     <table class="table table-bordered table-striped table-responsive" id="evaluationsTableWrapper">
       <thead>
         <tr>
@@ -120,7 +135,7 @@
     </div></div>
   </div>
 
-  <div class="toast-container">
+  <div class="toast-container no-print">
     <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2" role="alert">
       <div class="d-flex"><div class="toast-body">✅ العملية نجحت</div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
@@ -139,7 +154,6 @@
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError = new bootstrap.Toast(document.getElementById('toastError'));
     let lastCollege = "";
-    let savedVisibleColumns = [];
 
     function showSuccess(msg="✅ العملية نجحت") {
       document.querySelector("#toastSuccess .toast-body").innerText = msg;toastSuccess.show();
@@ -162,12 +176,7 @@
     function updateAvailability(row) {
       let sum = 0;
       const fields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
-      fields.forEach(f => {
-        const cell = row.querySelector(`[data-field="${f}"]`);
-        if (cell && !cell.classList.contains("hidden-col")) {
-          sum += parseFloat(cell?.innerText) || 0;
-        }
-      });
+      fields.forEach(f => {const cell = row.querySelector(`[data-field="${f}"]`);sum += parseFloat(cell?.innerText) || 0;});
       const availabilityCell = row.querySelector(".availability-cell");
       availabilityCell.innerText = sum.toFixed(2);
       availabilityCell.classList.add("highlight");
@@ -216,8 +225,8 @@
           tbody.appendChild(tr);
           updateAvailability(tr);
         });
-        applyColumnVisibility();
         updateCompletionRate();
+        applyColumnVisibility();
         applyCommitteeSearch();
       } catch (err) { showError("❌ فشل تحميل البيانات"); console.error(err); }
     }
@@ -236,12 +245,12 @@
       let numCommittees = 0;
       rows.forEach(row => {
         const availabilityCell = row.querySelector('.availability-cell');
-        if (availabilityCell && row.style.display !== "none") {
+        if (availabilityCell) {
           totalAvailability += parseFloat(availabilityCell.innerText) || 0;
           numCommittees++;
         }
       });
-      const visibleCols = savedVisibleColumns.length;
+      const visibleCols = 9; 
       const denominator = numCommittees * visibleCols;
       const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
       const completionDiv = document.getElementById("completionRateContainer");
@@ -257,17 +266,6 @@
       const showDate = document.getElementById('toggle_date').checked;
       document.querySelectorAll('.col-college').forEach(cell => {cell.classList.toggle('hidden-col', !showCollege);});
       document.querySelectorAll('.date-col').forEach(cell => {cell.classList.toggle('hidden-col', !showDate);});
-
-      // تطبيق إعدادات صفحة الإدارة
-      const allFields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
-      allFields.forEach(f => {
-        document.querySelectorAll(`[data-field="${f}"]`).forEach(cell => {
-          cell.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
-        });
-        const th = document.querySelector(`.col-${f}`);
-        if (th) th.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
-      });
-
       document.querySelectorAll('#committeesTable tr').forEach(tr => updateAvailability(tr));
       updateCompletionRate();
       updateAvailabilityHeader();
@@ -275,8 +273,10 @@
     document.querySelectorAll('.simple-toggle').forEach(cb => {cb.addEventListener('change', applyColumnVisibility);});
 
     function updateAvailabilityHeader() {
-      document.getElementById("availabilityHeader").innerText = `درجة التوفر من (${savedVisibleColumns.length})`;
+      const visibleCols = 9;
+      document.getElementById("availabilityHeader").innerText = `درجة التوفر من (${visibleCols})`;
     }
+    updateAvailabilityHeader();
 
     function applyCommitteeSearch() {
       const searchTerm = document.getElementById("committeeSearch").value.trim().toLowerCase();
@@ -291,13 +291,11 @@
       try {
         const res = await axios.get('/api/settings');
         const settings = res.data;
-        savedVisibleColumns = settings.visibleColumns || [];
         if (settings.selectedVisits) {
           document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: " + settings.selectedVisits.join(" | ");
         } else {
           document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";
         }
-        applyColumnVisibility();
       } catch (err) {
         console.error("❌ فشل تحميل الإعدادات", err);
         document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";
