--- a/public/test.html
+++ b/public/test.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>عرض تقييم اللجان</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
     body { background: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
     .container { margin-top: 30px; }
@@ -54,53 +55,48 @@
       color: #000;
     }
 
-    /* ✅ للطباعة */
     @media print {
       @page { size: A4 landscape; margin: 10mm; }
-      body * { visibility: hidden; }
-      .printable, .printable * { visibility: visible; }
-      .printable { position: absolute; top: 0; left: 0; width: 100%; }
-      .no-print { display: none !important; }
+      body { background: #fff; }
+      .sticky-header, .toast-container { display: none !important; }
       table { font-size: 12px; }
-      #evaluationsTableWrapper th, #evaluationsTableWrapper td { padding: 4px; }
     }
   </style>
 </head>
 <body>
-  <div class="container printable">
-    <div class="sticky-header d-flex justify-content-between align-items-center">
-      <h3 class="text-center mb-4 flex-grow-1">📊 عرض تقييم اللجان</h3>
-      <button class="btn btn-secondary no-print" onclick="window.print()">🖨️ طباعة</button>
-    </div>
-
-    <div class="filters row align-items-center">
-      <div class="col-md-4 mb-2">
-        <label class="form-label">الكلية</label>
-        <select id="collegeFilter" class="form-select">
-          <option value="">جميع الكليات</option>
-        </select>
-      </div>
-      <div class="col-md-4 mb-2 d-flex align-items-center">
-        <label class="form-label me-2">البحث بإسم اللجنة</label>
-        <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
-      </div>
-      <div class="col-md-4 mb-2 d-flex align-items-center gap-3">
-        <div class="form-check">
-          <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
-          <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
+  <div class="container">
+    <div class="sticky-header">
+      <h3 class="text-center mb-4">📊 عرض تقييم اللجان</h3>
+      <div class="filters row align-items-center">
+        <div class="col-md-3 mb-2">
+          <label class="form-label">الكلية</label>
+          <select id="collegeFilter" class="form-select">
+            <option value="">جميع الكليات</option>
+          </select>
         </div>
-        <div class="form-check">
-          <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date">
-          <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
+        <div class="col-md-3 mb-2">
+          <label class="form-label">البحث باسم اللجنة</label>
+          <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
+        </div>
+        <div class="col-md-4 mb-2 d-flex align-items-center gap-3">
+          <div class="form-check">
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
+            <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date">
+            <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
+          </div>
+        </div>
+        <div class="col-md-2 mb-2 text-start">
+          <button class="btn btn-secondary" onclick="window.print()"><i class="bi bi-printer"></i></button>
         </div>
       </div>
+      <div id="infoContainer">
+        <div id="selectedVisitsContainer"></div>
+        <div id="completionRateContainer"></div>
+      </div>
     </div>
-
-    <div id="infoContainer">
-      <div id="selectedVisitsContainer"></div>
-      <div id="completionRateContainer"></div>
-    </div>
-
     <table class="table table-bordered table-striped table-responsive" id="evaluationsTableWrapper">
       <thead>
         <tr>
@@ -135,7 +131,7 @@
     </div></div>
   </div>
 
-  <div class="toast-container no-print">
+  <div class="toast-container">
     <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2" role="alert">
       <div class="d-flex"><div class="toast-body">✅ العملية نجحت</div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
