--- a/public/test.html
+++ b/public/test.html
@@ -13,7 +13,7 @@
     td { text-align: center; vertical-align: middle; }
     .highlight { background-color: #d4edda !important; transition: background-color 1s ease; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 2000; }
-    .filters { margin-bottom: 10px; width: 99%; margin-left: auto; margin-right: auto; }
+    .filters { margin-bottom: 10px; width: 99%; margin-left: auto; margin-right: auto; text-align: center; }
 
     #evaluationsTableWrapper th.date-col,
     #evaluationsTableWrapper td.date-col {
@@ -82,7 +82,7 @@
       <h3 class="text-center mb-4">📊 عرض تقييم اللجان</h3>
 
       <!-- الفلاتر -->
-      <div class="filters row align-items-center">
+      <div class="filters row justify-content-center">
         <div class="col-md-3 mb-2">
           <label class="form-label">الكلية</label>
           <select id="collegeFilter" class="form-select">
@@ -96,8 +96,8 @@
       </div>
 
       <!-- checkboxes + زر الطباعة -->
-      <div class="row mb-3 align-items-center">
-        <div class="col-md-10 d-flex align-items-center gap-4">
+      <div class="row mb-3 justify-content-center">
+        <div class="col-md-6 d-flex align-items-center justify-content-center gap-4">
           <div class="form-check">
             <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
             <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
@@ -106,8 +106,6 @@
             <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date">
             <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
           </div>
-        </div>
-        <div class="col-md-2 text-start">
           <button class="btn btn-secondary" onclick="window.print()"><i class="bi bi-printer"></i></button>
         </div>
       </div>
