--- a/public/test.html
+++ b/public/test.html
@@ -13,7 +13,7 @@
     td { text-align: center; vertical-align: middle; }
     .highlight { background-color: #d4edda !important; transition: background-color 1s ease; }
     .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 2000; }
-    .filters { margin-bottom: 10px; width: 99%; margin-left: auto; margin-right: auto; text-align: center; }
+    .filters { margin-bottom: 20px; width: 99%; margin-left: auto; margin-right: auto; text-align: center; }
 
     #evaluationsTableWrapper th.date-col,
     #evaluationsTableWrapper td.date-col {
@@ -54,26 +54,6 @@
       background: #f8f9fa;
       color: #000;
     }
-
-    .screen-notes { display: inline; }
-    .print-notes { display: none; }
-
-    #printHeader {
-      display: none;
-      text-align: center;
-      margin-bottom: 15px;
-      font-weight: bold;
-    }
-
-    @media print {
-      @page { size: A4 landscape; margin: 10mm; }
-      body { background: #fff; }
-      .sticky-header, .toast-container { display: none !important; }
-      table { font-size: 12px; }
-      .screen-notes { display: none !important; }
-      .print-notes { display: inline !important; white-space: pre-wrap; }
-      #printHeader { display: block !important; }
-    }
   </style>
 </head>
 <body>
@@ -81,29 +61,29 @@
     <div class="sticky-header">
       <h3 class="text-center mb-4">📊 عرض تقييم اللجان</h3>
 
-      <!-- الفلاتر -->
+      <!-- الفلاتر في الوسط -->
       <div class="filters row justify-content-center">
-        <div class="col-md-3 mb-2">
-          <label class="form-label">الكلية</label>
+        <div class="col-md-3 mb-2 text-center">
+          <label class="form-label d-block">الكلية</label>
           <select id="collegeFilter" class="form-select">
             <option value="">جميع الكليات</option>
           </select>
         </div>
-        <div class="col-md-3 mb-2">
-          <label class="form-label">البحث باسم اللجنة</label>
+        <div class="col-md-3 mb-2 text-center">
+          <label class="form-label d-block">البحث بإسم اللجنة</label>
           <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
         </div>
       </div>
 
-      <!-- checkboxes + زر الطباعة -->
+      <!-- checkboxes وزر الطباعة في الوسط -->
       <div class="row mb-3 justify-content-center">
-        <div class="col-md-6 d-flex align-items-center justify-content-center gap-4">
+        <div class="col-md-8 d-flex align-items-center justify-content-center gap-4">
           <div class="form-check">
-            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" data-field="college" checked>
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" checked>
             <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date" data-field="date">
+            <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date">
             <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
           </div>
           <button class="btn btn-secondary" onclick="window.print()"><i class="bi bi-printer"></i></button>
@@ -115,9 +95,6 @@
         <div id="completionRateContainer"></div>
       </div>
     </div>
-
-    <div id="printHeader"></div>
-
     <table class="table table-bordered table-striped table-responsive" id="evaluationsTableWrapper">
       <thead>
         <tr>
@@ -135,7 +112,7 @@
           <th class="col-report2">تقرير إنجاز 2</th>
           <th class="col-report3">تقرير إنجاز 3</th>
           <th class="col-statistical_analysis">التحليل الإحصائي</th>
-          <th id="availabilityHeader">درجة التوفر من (0)</th>
+          <th id="availabilityHeader">درجة التوفر من (9)</th>
           <th>الملاحظات</th>
         </tr>
       </thead>
@@ -171,8 +148,6 @@
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError = new bootstrap.Toast(document.getElementById('toastError'));
     let lastCollege = "";
-    let currentVisitsText = "";
-    let currentCommitteesCount = 0;
     let savedVisibleColumns = [];
 
     function showSuccess(msg="✅ العملية نجحت") {
@@ -195,7 +170,8 @@
 
     function updateAvailability(row) {
       let sum = 0;
-      savedVisibleColumns.forEach(f => {
+      const fields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
+      fields.forEach(f => {
         const cell = row.querySelector(`[data-field="${f}"]`);
         if (cell && !cell.classList.contains("hidden-col")) {
           sum += parseFloat(cell?.innerText) || 0;
@@ -232,34 +208,25 @@
             <td class="col-college">${c.college}</td>
             <td>${c.committee_name}</td>
             <td class="date-col hidden-col">${c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-'}</td>
-            <td data-field="formation_decision" class="col-formation_decision">${c.formation_decision ?? 0}</td>
-            <td data-field="work_plan" class="col-work_plan">${c.work_plan ?? 0}</td>
-            <td data-field="performance_indicators" class="col-performance_indicators">${c.performance_indicators ?? 0}</td>
-            <td data-field="meetings" class="col-meetings">${c.meetings ?? 0}</td>
-            <td data-field="consistency" class="col-consistency">${c.consistency ?? 0}</td>
-            <td data-field="coverage_books" class="col-coverage_books">${c.coverage_books ?? 0}</td>
-            <td data-field="report1" class="col-report1">${c.report1 ?? 0}</td>
-            <td data-field="report2" class="col-report2">${c.report2 ?? 0}</td>
-            <td data-field="report3" class="col-report3">${c.report3 ?? 0}</td>
-            <td data-field="statistical_analysis" class="col-statistical_analysis">${c.statistical_analysis ?? 0}</td>
+            <td data-field="formation_decision">${c.formation_decision ?? 0}</td>
+            <td data-field="work_plan">${c.work_plan ?? 0}</td>
+            <td data-field="performance_indicators">${c.performance_indicators ?? 0}</td>
+            <td data-field="meetings">${c.meetings ?? 0}</td>
+            <td data-field="consistency">${c.consistency ?? 0}</td>
+            <td data-field="coverage_books">${c.coverage_books ?? 0}</td>
+            <td data-field="report1">${c.report1 ?? 0}</td>
+            <td data-field="report2">${c.report2 ?? 0}</td>
+            <td data-field="report3">${c.report3 ?? 0}</td>
+            <td data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
             <td class="availability-cell">${c.availability_score ?? 0}</td>
-            <td>
-              <span class="screen-notes">
-                ${c.notes && c.notes.trim() !== "" && c.notes.trim() !== "<p><br></p>"? 
-                  `<button class="btn btn-sm btn-info" onclick="showNotes(\`${c.notes}\`)">🔍</button>` 
-                  : '<span class="text-muted">لا توجد ملاحظات</span>'}
-              </span>
-              <span class="print-notes">
-                ${c.notes && c.notes.trim() !== "" && c.notes.trim() !== "<p><br></p>"? 
-                  c.notes : 'لا توجد ملاحظات'}
-              </span>
-            </td>`;
+            <td>${c.notes && c.notes.trim() !== "" && c.notes.trim() !== "<p><br></p>"? 
+              `<button class="btn btn-sm btn-info" onclick="showNotes(\`${c.notes}\`)">🔍</button>` 
+              : '<span class="text-muted">لا توجد ملاحظات</span>'}</td>`;
           tbody.appendChild(tr);
           updateAvailability(tr);
         });
-        currentCommitteesCount = res.data.length;
-        updateCompletionRate();
         applyColumnVisibility();
+        updateCompletionRate();
         applyCommitteeSearch();
       } catch (err) { showError("❌ فشل تحميل البيانات"); console.error(err); }
     }
@@ -283,7 +250,6 @@
           numCommittees++;
         }
       });
-      currentCommitteesCount = numCommittees;
       const visibleCols = savedVisibleColumns.length;
       const denominator = numCommittees * visibleCols;
       const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
@@ -293,7 +259,6 @@
       } else {
         completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>📋 عدد لجان جميع الكليات = ${numCommittees}`;
       }
-      updatePrintHeader();
     }
 
     function applyColumnVisibility() {
@@ -301,6 +266,15 @@
       const showDate = document.getElementById('toggle_date').checked;
       document.querySelectorAll('.col-college').forEach(cell => {cell.classList.toggle('hidden-col', !showCollege);});
       document.querySelectorAll('.date-col').forEach(cell => {cell.classList.toggle('hidden-col', !showDate);});
+
+      const allFields = ["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"];
+      allFields.forEach(f => {
+        document.querySelectorAll(`[data-field="${f}"]`).forEach(cell => {
+          cell.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
+        });
+        const th = document.querySelector(`.col-${f}`);
+        if (th) th.classList.toggle('hidden-col', !savedVisibleColumns.includes(f));
+      });
 
       document.querySelectorAll('#committeesTable tr').forEach(tr => updateAvailability(tr));
       updateCompletionRate();
@@ -336,18 +310,8 @@
         console.error("❌ فشل تحميل الإعدادات", err);
         document.getElementById("selectedVisitsContainer").innerHTML = "الزيارات: لم يتم إختيار أي زيارة";
       }
-      updatePrintHeader();
     }
     loadSettings();
-
-    function updatePrintHeader() {
-      const headerDiv = document.getElementById("printHeader");
-      headerDiv.innerHTML = `
-        📊 نتائج تقييم اللجان - ${lastCollege}<br>
-        الزيارات: ${currentVisitsText}<br>
-        📋 عدد اللجان = ${currentCommitteesCount}
-      `;
-    }
   </script>
 </body>
 </html>
