--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -75,7 +75,7 @@
         </div>
       </div>
 
-      <!-- checkboxes وزر الطباعة في الوسط -->
+      <!-- checkboxes وزر الطباعة وزر الاستعلام -->
       <div class="row mb-3 justify-content-center">
         <div class="col-md-8 d-flex align-items-center justify-content-center gap-4">
           <div class="form-check">
@@ -87,6 +87,7 @@
             <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
           </div>
           <button class="btn btn-secondary" onclick="window.print()"><i class="bi bi-printer"></i></button>
+          <button class="btn btn-info" onclick="loadSettings()"><i class="bi bi-arrow-repeat"></i></button>
         </div>
       </div>
 
