--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
 <div class="toast-container" id="toastContainer"></div>
 
 <script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
+const API_BASE = 'https://vdash-qkyv.onrender.com';
 let videos = [];
 let passwordModal;
 
