--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link text-white fw-semibold" href="#" onclick="requestDashboardAccess()"><i class="bi bi-shield-lock-fill fs-5"></i> لوحة التحكم</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-semibold" href="https://video-dashboard-backend.onrender.com/viewlinks.html"><i class="bi bi-link-45deg fs-5"></i> روابط مهمة</a></li>
+        <li class="nav-item"><a class="nav-link text-white fw-semibold" href="https://vdash-qkyv.onrender.com/viewlinks.html"><i class="bi bi-link-45deg fs-5"></i> روابط مهمة</a></li>
         <li class="nav-item" id="logoutNavItem" style="display:none;">
           <a class="nav-link text-white fw-semibold" href="#" onclick="logout()"><i class="bi bi-box-arrow-right fs-5"></i> تسجيل الخروج</a>
         </li>
