--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -168,7 +168,7 @@
 <footer>برمجة وتطوير: ليث عبيدات</footer>
 
 <script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
+const API_BASE = 'https://vdash-qkyv.onrender.com';
 let linksData = [];
 
 // جلب الروابط من السيرفر
