--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -115,7 +115,7 @@
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link text-white fw-semibold position-relative" 
-             href="https://video-dashboard-backend.onrender.com">
+             href="https://vdash-qkyv.onrender.com">
              <i class="bi bi-house-door-fill fs-5"></i> الرئيسية
           </a>
         </li>
