--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -92,6 +92,7 @@
       </div>
 
       <div id="infoContainer">
+        <div id="semesterInfo">الفصل الدراسي الثاني - 2024-2025</div>
         <div id="selectedVisitsContainer"></div>
         <div id="completionRateContainer"></div>
       </div>
